syntax = "proto3";

option go_package = "github.com/Far-sa/commons/api";

package api;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);

  // rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  //* rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message GetOrderRequest {
  string OrderID = 1;
  string CustomerID = 2;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PricID = 4;
}

message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}
message ItemsWithQuantity {
  string itemID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}